clean up package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "index.js",
   "description": "Test for a USD currency formatted input",
-  "homepage": "https://github.com/cfpb/is-money",
+  "homepage": "https://github.com/cfpb/is-money-usd",
   "bugs": "https://github.com/cfpb/is-money/issues",
   "author": {
     "name": "Consumer Financial Protection Bureau",
@@ -18,19 +18,16 @@
     "lib"
   ],
   "keywords": [
-    "is-money",
     "money",
-    " finance",
-    " financial",
-    " browserify"
+    "currency",
+    "finance",
+    "financial",
+    "browserify"
   ],
   "devDependencies": {
     "nodeunit": "~0.8.6"
   },
   "scripts": {
     "test": "nodeunit test/is-money-tests.js"
-  },
-  "dependencies": {
-    "unformat-usd": "^0.1.1"
   }
 }
